--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
+dist: trusty
 sudo: required
-
+language: node_js
+node_js:
+  - "9"
+  
 services:
   - docker
 
@@ -7,7 +11,11 @@ branches:
   only:
     - master
 
+before_script:
+  - npm install -g @angular/cli
+
 script:
+  - ng build --prod --aot
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker build -t $DOCKER_USERNAME/ccsi-upright-frontend .
   - docker images
