--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
     - master
 
 before_script:
-  - npm install -g @angular/cli
+  - npm install -g @angular/cli@6.0.3
 
 script:
   - ng build --prod --aot
