--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@clr/ui": "^0.11.24",
     "@webcomponents/custom-elements": "1.0.0",
     "core-js": "^2.5.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "rxjs-compat": "^6.5.3",
     "zone.js": "^0.8.26",
     "@angular/animations": "^6.0.3",
